--- a/MyFirstHelixToolkitAppToPlayAround/MainWindow.xaml
+++ b/MyFirstHelixToolkitAppToPlayAround/MainWindow.xaml
@@ -7,6 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="0.5*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <TextBlock>Welcome to my first application</TextBlock>
+        <Button Grid.Column="1" Grid.Row="1" Click="Button_Click" >Click to navigate to next screen</Button>
     </Grid>
 </Window>
