--- a/MyFirstHelixToolkitAppToPlayAround/HelixTKObjectInteractionWindow.xaml
+++ b/MyFirstHelixToolkitAppToPlayAround/HelixTKObjectInteractionWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MyFirstHelixToolkitAppToPlayAround.ObjectInteractionWindow"
+﻿<Window x:Class="MyFirstHelixToolkitAppToPlayAround.HelixTKObjectInteractionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -23,13 +23,32 @@
                 <TextBlock>Welcome to object interaction window</TextBlock>
                 <TextBlock>You could interact with the 3d model in the right</TextBlock>
             </StackPanel>
+
+            <StackPanel Margin="0 0 0 10">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock>Current X coordinate :</TextBlock>
+                    <TextBlock Width="100" Text="{Binding Path=XCoord , StringFormat=N2}"></TextBlock>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock>Current Y coordinate :</TextBlock>
+                    <TextBlock Width="100" Text="{Binding Path=YCoord , StringFormat=N2}"></TextBlock>
+                </StackPanel>
+                
+                
+            </StackPanel>
+
+            <StackPanel Margin="0 10 0 0" Orientation="Horizontal">
+                <TextBlock>Geometry Hit Status : </TextBlock>
+                <TextBlock Text="{Binding IsGeometryHit}"></TextBlock>
+            </StackPanel>
+
             <StackPanel Margin="0 10 0 0">
                 <TextBlock>Press the below Button to add a triangle</TextBlock>
-                <Button x:Name="AddTriangleToGeometryModel" Click="AddTriangleToGeometryModel_Click">Add Triangle</Button>
+                <Button x:Name="AddTriangleToGeometryModelBtn" Click="AddTriangleToGeometryModel_Click">Add Triangle</Button>
             </StackPanel>
         </StackPanel>
 
-        <HelixToolKit:HelixViewport3D ZoomExtentsWhenLoaded="True" Grid.Column="2" Grid.RowSpan="3" BorderThickness="3" BorderBrush="Black">
+        <HelixToolKit:HelixViewport3D ZoomExtentsWhenLoaded="True" Grid.Column="2" Grid.RowSpan="3" BorderThickness="3" BorderBrush="Black" MouseMove="HelixViewport3D_MouseMove">
             <HelixToolKit:SunLight />
             <ModelVisual3D>
                 <ModelVisual3D.Content>
