--- a/MyFirstHelixToolkitAppToPlayAround/MainWindow.xaml
+++ b/MyFirstHelixToolkitAppToPlayAround/MainWindow.xaml
@@ -8,9 +8,9 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
@@ -24,6 +24,8 @@
             <Button x:Name="ChartsView" Margin="10" Click="ChartsView_Click" >Click to navigate to Charts Viewer</Button>
 
             <Button x:Name="ThreadingExp" Margin="10" Click="ThreadingExp_Click" >Click to navigate to Threading experiment Viewer</Button>
+
+            <Button x:Name="surfacePlotNavigationBtn" Margin="10" Click="surfacePlotNavigationBtn_Click" Content="Click to navigate to 3D Plot View" />
         </StackPanel>
         
     </Grid>
